# manipulation

./: .gitignore  README.md  cartesian_move.py  franka_traj.pkl  generate_trajectory.py  record_trajectory.py  run_trajectory.py
franka_settings/end_effector/: endeffector-config.json
manipulation_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
manipulation_ws/install/snaak_manipulation/lib/snaak_manipulation/: follow_trajectory.py  manipulation_actions_node.py
manipulation_ws/install/snaak_manipulation/share/snaak_manipulation/: home_bin_1_traj.pkl  home_bin_2_traj.pkl  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
manipulation_ws/log/: latest_build
manipulation_ws/src/snaak_manipulation/: CMakeLists.txt  package.xml
manipulation_ws/src/snaak_manipulation/action/: FollowTrajectory.action  Pickup.action
manipulation_ws/src/snaak_manipulation/include/: home2bin2_cam_verified.pkl
manipulation_ws/src/snaak_manipulation/msg/: RigidTransform.msg
manipulation_ws/src/snaak_manipulation/scripts/: follow_trajectory.py  manipulation_actions.py  manipulation_actions_node.py  manipulation_primary_node.py
test_scripts/: bin12home.pkl  cartesian_impedance.py  cartesian_move.py  franka_constants.py  franka_constants_copy.py  generate_trajectory.py  print_pose.py  read_boxes.py  record_trajectory.py  run_trajectory.py
test_scripts/test_trajectories/: bin22home.pkl  bin32home.pkl  home2bin1_cam_verified.pkl  home2bin3_cam_verified.pkl  home_assembly_traj.pkl  home_bin_3_traj.pkl
(+48 files in other folders)
